--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,3 @@
 MONGO_URI = "mongodb+srv://sahum3378:gw6geYHsINJn1g0R@cluster0.sbsbx.mongodb.net/learning"
 JWT_SECRET_KEY = dekh-raha-na-vinod
-SPOONACULAR_API_KEY= "092e26df7455448eb75c97c2cafea446"
+API_KEY= "b134c3f6c0074957a135975cd91d8092"
